--- a/www/in/css.css
+++ b/www/in/css.css
@@ -5,10 +5,11 @@ body { font: 12px/1 Helvetica, "Comic Sans", "Comic Sans MS", cursive; }
 
 /* canvas page */
 #canvas { display:block }
-#adminLink:link, #adminLink:visited {
+.links.left { left: 0; }
+.links.right { right: 0; }
+.links:link, .links:visited {
 	position: absolute;
 	bottom: 0;
-	right: 0;
 	padding: 5px 7px;
 	margin: 5px;
 	-moz-border-radius: 5px;
@@ -17,7 +18,7 @@ body { font: 12px/1 Helvetica, "Comic Sans", "Comic Sans MS", cursive; }
 	color: rgba(200,200,200,.3);
 	text-decoration: none;
 }
-#adminLink:hover, #adminLink:active {
+.links:hover, .links:active {
 	background-color: rgba(230,230,230,.7);
 	color: rgba(130,130,130,.7);
 }
