--- a/www/in/admin.css
+++ b/www/in/admin.css
@@ -1,9 +1,12 @@
 /* overall cleanup */
-body { font: 12px/1 Helvetica, "Comic Sans", "Comic Sans MS", cursive; }
+body, button { font: 12px/1 Helvetica, "Comic Sans", "Comic Sans MS", cursive }
+hgroup { text-align: center }
 .adminList {
 	padding:0;
 	list-style: none;
 	width: 80%;
+	max-width: 800px;
+	min-width: 400px;
 	margin: 0 auto;
 }
 .adminList > li {
@@ -18,12 +21,3 @@ body { font: 12px/1 Helvetica, "Comic Sans", "Comic Sans MS", cursive; }
 	height: 200px;
 	width: 100%;
 }
-/*
-#screenLayout .screen {
-	fill: red;
-}
-#screenLayout .screenID {
-	text-anchor: middle;
-	fill: #fff;
-}
-*/
