--- a/www/in/admin.css
+++ b/www/in/admin.css
@@ -12,7 +12,7 @@ hgroup { text-align: center }
 .adminList > li {
 	border:solid 1px black;
 	margin-bottom: 10px;
-	padding: 10px;
+	padding: 0 10px 10px 10px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 }
@@ -22,3 +22,7 @@ hgroup { text-align: center }
 	width: 100%;
 }
 .ui-widget { font-size: 62.5% !important }
+input[type='text'] {
+	border: 0; color: #f6931f; font-weight: bold; width: 50px
+}
+h3 { padding: 5px; margin-top:12px; }
