--- a/www/in/css.css
+++ b/www/in/css.css
@@ -1,6 +1,6 @@
 /* overall cleanup */
 * { margin:0px; padding:0px }
-html, body { width:100%; height:100% }
+html, body { width:100%; height:100%; overflow: hidden; }
 body { font: 12px/1 Helvetica, "Comic Sans", "Comic Sans MS", cursive; }
 
 /* canvas page */
