--- a/www/in/css.css
+++ b/www/in/css.css
@@ -1,12 +1,17 @@
 /* overall cleanup */
-* { margin:0px; padding:0px }
-html, body { width:100%; height:100%; overflow: hidden; }
+* {
+	margin: 0px;
+	padding: 0px;
+}
+html, body {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
 body { font: 12px/1 Helvetica, "Comic Sans", "Comic Sans MS", cursive; }
-
-/* canvas page */
 #canvas { display:block }
-.links.left { left: 0; }
-.links.right { right: 0; }
+.links.left { left:0 }
+.links.right { right:0 }
 .links:link, .links:visited {
 	position: absolute;
 	bottom: 0;
