--- a/client/style.css
+++ b/client/style.css
@@ -12,12 +12,12 @@ body {
 }
 
 /* canvas page */
-#canvas {
+.canvas {
 	display: block;
 	height: 100%;
 	width: 100%;
 }
-#adminLink:link, #adminLink:visited {
+.link:link, .link:visited {
 	position: absolute;
 	bottom: 0;
 	right: 0;
@@ -29,11 +29,11 @@ body {
 	color: rgba(200,200,200,.3);
 	text-decoration: none;
 }
-#adminLink:hover, #adminLink:active {
+.link:hover, .link:active {
 	background-color: rgba(230,230,230,.7);
 	color: rgba(130,130,130,.7);
 }
-#adminNum {
+.num {
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -47,4 +47,43 @@ body {
 	border-radius: 15px;
 	background-color: rgba(230,230,230,.7);
 	color: rgba(130,130,130,.7);
+}
+
+/* dialog */
+.dialog {
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.5);
+}
+.dialog.hide {
+	display: none;
+}
+.dialog .content {
+	display: block;
+	background-color: #fff;
+	height: 80%;
+	width: 80%;
+	left: 10%;
+	right: 10%;
+	position: absolute;
+	top: 10%;
+	bottom: 10%;
+	border-radius: 20px;
+	padding: 10px;
+	box-sizing: border-box;
+	border: 1px solid #000;
+}
+.click {
+	color: #aaa;
+	background-color: transparent;
+	position: absolute;
+	font-size: 20px;
+	line-height: 20px;
+	z-index: 2;
+	border: none;
+	outline: none;
 }
